--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,20 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fff;
+  --foreground: #000;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
 body {
   color: var(--foreground);
@@ -35,8 +35,34 @@ a {
   text-decoration: none;
 }
 
+.container {
+  width: min(100%, 1200px);
+  margin: 0 auto;
+}
+
+main {
+  display: flex;
+  height: calc(100vh - 40px);
+  
+
+    width: 100%;
+    padding: 15px;
+    /* overflow-y: auto; */
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & span {
+    font-size: 20px;
+    font-weight: bold;
+  }
+}
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
+
