--- a/app/globals.css
+++ b/app/globals.css
@@ -41,9 +41,8 @@ a {
 }
 
 main {
-  display: flex;
-  height: calc(100vh - 40px);
-  margin: 2em 0;
+  /* height: calc(100vh - 40px); */
+  margin: 1em 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
   gap: 20px;
@@ -70,6 +69,7 @@ main {
 .cursor-pointer {
   cursor: pointer;
 }
+
 
 
 /* 
