--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -5,11 +5,12 @@
   background-color: #fff;
   /* box-shadow: 5px 0 5px #00000040; */
   overflow: hidden;
-
+  z-index: 9999;
+  border-bottom: 1px solid #00000040;
   &>div {
     width: min(100%, 1200px);
     margin: 0 auto;
-    border-bottom: 1px solid #00000040;
+    
     padding: 12px 16px 8px;
     margin: 0 auto;
     display: flex;
