--- a/components/MyGoodsList/myGoodCard.module.css
+++ b/components/MyGoodsList/myGoodCard.module.css
@@ -3,13 +3,23 @@
   position: relative;
   padding: 15px;
   gap: 1.5em;
-  & div {
+  box-shadow: 2px 2px 5px #00000040;
+  margin: .5em 1em;
+  border-radius: .8em;
+  transition: scale .2s linear;
+  & img {
+    aspect-ratio: 133/200;
+  }
+  &:hover {
+    scale: 1.005;
+  }
+  & .goodInfo {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 4;
   }
-  & img {
+  & .preview {
     height: 200px;
     aspect-ratio: 1.33/2;
     object-fit: cover;
@@ -31,3 +41,13 @@
   font-size: 18px;
   font-weight: bold;
 }
+
+.btnGroup {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
