--- a/components/skeleton/skeleton.module.css
+++ b/components/skeleton/skeleton.module.css
@@ -1,7 +1,7 @@
 .skeletonGrid,
 .skeletonFlex {
   display: flex;
-  & *:not(img) {
+  & *:not(img,.btnGroup) {
     background-color: rgba(0, 0, 0, 0.11);
     animation: Skeleton-keyframes-pulse 1.5s ease-in-out 0.5s infinite;
     border-radius: 8px;
@@ -14,6 +14,9 @@
   width: 100%;
   height: 358px;
   position: relative;
+  box-shadow: 2px 2px 5px #00000040;
+  border-radius: 1em;
+  overflow: hidden;
   & img {
     position: absolute;
     bottom: 30px;
@@ -22,24 +25,29 @@
   .div {
     flex-grow: 7;
     max-height: 300px;
-  
+    border-radius: 0;
   }
   
   .long {
     flex-grow: .3;
     width: 80%;
-  
+    margin: .1em 0.5em;
   }
   .short {
     flex-grow: .3;
-    width: 40%;
+    width: 30%;
+    margin: 0em 0.5em .4em;
   }
+  
 }
 
 .skeletonFlex {
   position: relative;
   padding: 15px;
   gap: 1.5em;
+  box-shadow: 2px 2px 5px #00000040;
+  margin: .5em 1em;
+  border-radius: .8em;
 
   .desc {
     flex-grow: 4;
@@ -77,9 +85,19 @@
     width: 25%;
     flex-grow: .4;
   }
+
+  .btnGroup {
+    position: absolute;
+    right: 10px;
+    top: 15px;
+    gap: 10px;
+    display: flex;
+    & > div {
+      width: 28px;
+      aspect-ratio: 1;
+    }
+  }
 }
-
-
 
 
 
