--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,17 @@ body {
   margin: 0;
 }
 
+.error {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  & p {
+    color: red;
+    font-size: 18px;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -53,24 +64,49 @@ a {
 }
 
 .center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-  & span {
-    font-size: 20px;
-    font-weight: bold;
-    margin-right: 8px;
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
 }
 
-.border-left {
-  border-left: 1px solid #00000040;
-}
 .cursor-pointer {
   cursor: pointer;
 }
 
+/* .loader {
+  width: 38px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  aspect-ratio: 1;
+  display:grid;
+  -webkit-mask: conic-gradient(from 15deg,#0000,#000);
+  animation: l26 1s infinite steps(12);
+}
+.loader,
+.loader:before,
+.loader:after{
+  background:
+    radial-gradient(closest-side at 50% 12.5%,
+     #000000 96%,#0000) 50% 0/20% 80% repeat-y,
+    radial-gradient(closest-side at 12.5% 50%,
+     #000000 96%,#0000) 0 50%/80% 20% repeat-x;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  grid-area: 1/1;
+  transform: rotate(30deg);
+}
+.loader:after {
+  transform: rotate(60deg);
+} */
+
+@keyframes l26 {
+  100% {transform:rotate(1turn)}
+}
 
 
 /* 
@@ -79,4 +115,5 @@ a {
     color-scheme: dark;
   }
 } */
+
 
