--- a/components/Account/Account.module.css
+++ b/components/Account/Account.module.css
@@ -2,5 +2,16 @@
   border-radius: 50%;
   margin: 0 2px 0 10px;
   padding: 7px;
-  
+}
+.account {
+  border-left: 1.5px solid #00000040;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & span {
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 8px;
+  }
 }
