--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,11 +1,14 @@
 .btn {
-  background-color: #00000030;
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
   border: none;
   padding: .5em 1.5em;
   border-radius: .8em;
-  transition: background-color .2s linear, scale .1s linear;
+  transition: color .2s linear, scale .1s linear;
+  cursor: pointer;
   &:hover {
-    background-color: #00000040;
+    color: #ffd500;
   }
   &:active {
     scale: .9;
