--- a/components/GoodList/GoodCard.module.css
+++ b/components/GoodList/GoodCard.module.css
@@ -1,4 +1,4 @@
-/* .good {
+.good {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -34,4 +34,4 @@
   font-weight: bold;
   margin: 0 0.6em;
 }
- */
+
