--- a/components/Spinner/index.module.css
+++ b/components/Spinner/index.module.css
@@ -1,4 +1,4 @@
-
+/* 
 .loader {
   width: 38px;
   position: absolute;
@@ -31,4 +31,4 @@
 
 @keyframes l26 {
   100% {transform:rotate(1turn)}
-}
+} */
