--- a/app/globals.css
+++ b/app/globals.css
@@ -46,9 +46,12 @@ a {
   text-decoration: none;
 }
 
+
+
 .container {
   width: min(100%, 1200px);
   margin: 0 auto;
+  /* position: relative; */
 }
 
 .grid {
@@ -74,7 +77,7 @@ a {
   cursor: pointer;
 }
 
-/* .loader {
+.loader {
   width: 38px;
   position: absolute;
   top: 50%;
@@ -102,7 +105,7 @@ a {
 }
 .loader:after {
   transform: rotate(60deg);
-} */
+}
 
 @keyframes l26 {
   100% {transform:rotate(1turn)}
