--- a/components/FormCreateGood/index.module.css
+++ b/components/FormCreateGood/index.module.css
@@ -65,13 +65,6 @@
   .upload {
     display: none; 
   }
-
-  .container {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* align-items: start; */
-    /* margin-top: 20px; */
-  }
   
   .label {
     background-color: #000;
@@ -98,26 +91,76 @@
     color: red;
     margin: .5em;
   }
-  
-  
+
   .filePreview {
-    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px; 
+    margin: 10px 0;
   }
   
-  .filePreview > img {
-    width: 100%;
-    max-width: 220px;
-    aspect-ratio:5/2;
-    border-radius: 5px;
-    margin-top: 10px;
+  .previewItem {
+    position: relative; 
+    width: 220px; 
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #f8f8f8;
+    box-shadow: 2px 2px 5px #00000040;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-  .filePreview button {
+  
+  .previewItem img {
+    width: 100%; 
+    height: 100%;
+    object-fit: contain;
+
+  }
+  
+  .previewItem button {
     position: absolute;
-    top: -2px;
-    left: 195px;
+    width: 25px;
+    top: 5px;
+    right: 5px;
   }
-  & button {
-    font-size: 16px;
+
+  
+  @media (max-width: 768px) {
+    .previewItem img {
+      object-fit: cover; 
+      object-position: top;
+    }
+    .previewItem {
+      width: 200px; 
+      height: 200px; 
+    }
+  }
+
+  @media (max-width: 575px) {
+    .previewItem {
+      width: 150px; 
+      height: 150px;
+    }
+  }
+  
+  @media (max-width: 435px) {
+    .filePreview {
+      justify-content: flex-start;
+      gap: 10px;
+    }
+  
+    .previewItem {
+      width: 120px; 
+      height: 120px; 
+    }
+  
+    .previewItem button {
+      font-size: 14px; 
+      width: 25px;
+      height: 25px;
+    }
   }
 }
 
